tests/reference/asr-array_02_decl-e8f6874.stderr
semantic error: Type mismatch in annotation-assignment, the types must be compatible
  --> tests/../integration_tests/array_02_decl.py:17:5
   |
17 |     ai32: i32[3, 3] = empty([3, 3], dtype=int32)
   |     ^^^^              ^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch ('i32[3,3]' and 'i32[9]')
